; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/libdb/extr_debug_supp.c_gdbstub_getoffsets.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/libdb/extr_debug_supp.c_gdbstub_getoffsets.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@__text_fstart = common dso_local global i64 0, align 8
@__data_fstart = common dso_local global i64 0, align 8
@__bss_fstart = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @gdbstub_getoffsets(i8** %0, i8** %1, i8** %2) #0 {
  %4 = alloca i8**, align 8
  %5 = alloca i8**, align 8
  %6 = alloca i8**, align 8
  store i8** %0, i8*** %4, align 8
  store i8** %1, i8*** %5, align 8
  store i8** %2, i8*** %6, align 8
  %7 = load i64, i64* @__text_fstart, align 8
  %8 = load i64, i64* @__text_fstart, align 8
  %9 = sub nsw i64 %7, %8
  %10 = inttoptr i64 %9 to i8*
  %11 = load i8**, i8*** %4, align 8
  store i8* %10, i8** %11, align 8
  %12 = load i64, i64* @__data_fstart, align 8
  %13 = load i64, i64* @__text_fstart, align 8
  %14 = sub nsw i64 %12, %13
  %15 = inttoptr i64 %14 to i8*
  %16 = load i8**, i8*** %5, align 8
  store i8* %15, i8** %16, align 8
  %17 = load i64, i64* @__bss_fstart, align 8
  %18 = load i64, i64* @__text_fstart, align 8
  %19 = sub nsw i64 %17, %18
  %20 = inttoptr i64 %19 to i8*
  %21 = load i8**, i8*** %6, align 8
  store i8* %20, i8** %21, align 8
  ret i32 1
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
